--- a/apps/docs/content/components/Button/index.mdx
+++ b/apps/docs/content/components/Button/index.mdx
@@ -27,29 +27,29 @@ Buttons allow users to initiate an action or command when clicked. The button's 
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/6a112917-5fed-4c30-ad22-e1f3c437d50b" />
+    <img src="https://github.com/primer/brand/assets/6951037/96da1bd5-d537-40c1-9103-96254813648f" />
     <Caption>Show focus styles on keyboard :focus</Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/01e53312-c2cb-4128-937f-01e4c313362c" />
+    <img src="https://github.com/primer/brand/assets/6951037/edc931cf-06ed-4814-8ad0-24a8344902c0" />
     <Caption>Don't remove default button :focus styles.</Caption>
   </Dont>
 </DoDontContainer>
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/e0bf58f6-db93-4dfb-927b-0d058e235e86" />
+    <img src="https://github.com/primer/brand/assets/6951037/1a234331-7efe-48e4-80bc-cd2a896f3171" />
     <Caption>Use sentence case for labels.</Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/41b4bb4e-1709-4ddc-834c-9f474061b943" />
+    <img src="https://github.com/primer/brand/assets/6951037/44ad7250-e9d1-4e23-9c00-229cd86447d4" />
     <Caption>Don't use all-caps or other text formats.</Caption>
   </Dont>
 </DoDontContainer>
 
 ## Anatomy
 
-![An image showing different button types.](https://github.com/primer/brand/assets/912236/af85252d-783e-47dd-9b2c-ead0df0745b9)
+![An image showing the different parts of a button with annotations.](https://github.com/primer/brand/assets/6951037/ef74e834-2650-424e-b382-bdcd4a09c113)
 
 ## Options
 
@@ -59,13 +59,13 @@ Buttons allow users to initiate an action or command when clicked. The button's 
 
 Primary buttons have top priority in visual hierarchy, and using too many of them on a single view dilutes their effectiveness. We recommend to limit the primary button to one button per view, and place it in the visible section, whenever possible, to indicate its emphasis relative to other actions. Use multiple primary buttons only when the action is repeated in multiple places of the same page. E,g a "Log in" button in the header and in the footer area.
 
-![An image showing all primary states.](https://github.com/primer/brand/assets/912236/95d56f96-2453-41db-81f1-6c2e04568c26)
+![An image showing all primary states.](https://github.com/primer/brand/assets/6951037/dfad0124-4cdc-4230-b442-4ee9c747d0f0)
 
 #### Secondary
 
 Secondary buttons are the default button type. Use them for the main actions on a page or form. Secondary buttons are the most common button type and should be used in most cases. They can be paired with a primary button to perform a secondary action, or used on their own.
 
-![An image showing all secondary states.](https://github.com/primer/brand/assets/912236/1acc8007-13a2-4083-b0f2-c1b4d5cf7b82)
+![An image showing all secondary states.](https://github.com/primer/brand/assets/6951037/71f5a85d-4e63-4a3b-b7fc-2492ceae2b30)
 
 #### Subtle
 
@@ -77,7 +77,7 @@ Subtle buttons have a transparent background with translucent hover and active s
 
 Turning on the block option for button allows the button to span the full width of its container. This feature can be particularly useful when you want the button to occupy more space. Block button can continue to pair with secondary or primary variants.
 
-![An image showing block button with all subtle states.](https://github.com/primer/brand/assets/131988618/eb7ab85e-c9b1-49ed-93be-ad3e5bff656e)
+![An image showing block button with all subtle states.](https://github.com/primer/brand/assets/6951037/2fe48284-7c3d-4262-9992-3fc029237fe6)
 
 ### Trailing and leading icons
 
