--- a/apps/docs/content/components/Testimonial/index.mdx
+++ b/apps/docs/content/components/Testimonial/index.mdx
@@ -8,7 +8,7 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image displaying a testimonial anatomy.](https://github.com/primer/brand/assets/912236/c9348fc5-36f4-40f8-a1ec-60bd84d37535)
+![An image displaying a testimonial anatomy.](https://github.com/primer/brand/assets/912236/5072db4b-446f-4091-be35-48cc020d51ba)
 
 - Quote: The quote from the customer.
 - Name: The name of the customer.
@@ -23,13 +23,31 @@ Testimonials should be short and concise. Quotes should be not be longer than 3-
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/dd1a3e57-d94f-4f62-9840-67fce2cd78d2" />
+    <img src="https://github.com/primer/brand/assets/912236/ca8b16f9-ada6-49b7-a627-db039f5bd3d9" />
     <Caption>Use short and concise quotes.</Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/e6c7e682-9948-4238-bc74-f26d705cce65" />
+    <img src="https://github.com/primer/brand/assets/912236/bb0ae79c-244f-4cdb-83e2-655bd99ee67e" />
     <Caption>
       Don't use long quotes that can be hard to read and understand.
+    </Caption>
+  </Dont>
+</DoDontContainer>
+
+Use highlitghts to alternate the color of the quote mark and emphasize specific parts of the quote.
+
+<DoDontContainer>
+  <Do>
+    <img src="https://github.com/primer/brand/assets/912236/0f81c397-c992-41be-8242-4d8500744213" />
+    <Caption>
+      Use emphasis to highlight te beginning of the quote and provide extra
+      visual weight.
+    </Caption>
+  </Do>
+  <Dont>
+    <img src="https://github.com/primer/brand/assets/912236/107d6fc4-7010-4a7c-859b-6a15b2ad6cc8" />
+    <Caption>
+      Don't use multiple highlights in the same quote to avoid visual noise.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -38,13 +56,13 @@ Avatars and logos are optional and can be used to provide more credibility about
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/8968b579-1ff6-490e-a5a2-2abd2da588e5" />
+    <img src="https://github.com/primer/brand/assets/912236/ed537938-cc59-4d02-9285-878ea03c6f5f" />
     <Caption>
       Use a real life image of the customer or the logo of the company.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/bcda5e31-1ccc-44a5-9d65-2f6aad326f4b" />
+    <img src="https://github.com/primer/brand/assets/912236/6320c943-64e7-4ed3-b337-3734372dcf16" />
     <Caption>
       Don't use illustrations or generic images. Use real life images to provide
       trust.
@@ -56,14 +74,14 @@ Testimonials can be used individually or in a group. When using a group of testi
 
 <DoDontContainer stacked>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/06a41538-6fca-4145-b1f5-7de16a8e078d" />
+    <img src="https://github.com/primer/brand/assets/912236/fc8eb38a-c765-4730-8c27-98d460d2c03e" />
     <Caption>
       Use a maximum of 3 or 4 testimonials per group, with the same size and
       alginment.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/ed834a59-65e9-4933-a9c7-ace37843c7a6" />
+    <img src="https://github.com/primer/brand/assets/912236/b8b84d81-e71e-4d44-87c7-d227222f2bc7" />
     <Caption>
       Don't use different sizes, alignments or alternate avatars and logos for
       groups of testimonials.
@@ -75,14 +93,14 @@ Use a single testimonial to highlight a specific feature or benefit of the produ
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/d59eff28-6db4-4f7a-a8c4-8fb69716edd7" />
+    <img src="https://github.com/primer/brand/assets/912236/e6e233fd-46e1-4d7f-8b07-39bb9169d8d8" />
     <Caption>
       Use testimonials to enhance the credibility of an specific feature or
       benefit.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/7888cd46-6397-4a6f-8f62-63d3236f0a5c" />
+    <img src="https://github.com/primer/brand/assets/912236/841d578b-e353-4dee-acbb-5c8bc3e7c356" />
     <Caption>
       Don't use multiple testimonials to showcase the same feature to avoid
       visual noise.
@@ -98,27 +116,27 @@ The testimonial component uses the small size by default. Use the large size to 
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/a10d6454-0b6e-4694-9acc-cdf48e31d922" />
+    <img src="https://github.com/primer/brand/assets/912236/3eae1c3c-9a8d-4452-8f3a-a973fa103bd3" />
     <Caption>
       Use the large size when using a single, full-width testimonial.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/34a502ea-4b32-4054-9518-4da63d86acf9" />
+    <img src="https://github.com/primer/brand/assets/912236/163324a6-0276-4aa9-94f0-e38d4aea8a3e" />
     <Caption>Don't use small size for full-width testimonials.</Caption>
   </Dont>
 </DoDontContainer>
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/91ee4072-41a3-4984-9af5-9c6f9b94135c" />
+    <img src="https://github.com/primer/brand/assets/912236/58036813-77a1-4af6-a2dc-d2ce05ac085d" />
     <Caption>
       Use the small size when paired with other components that showcase
       features, like rivers.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/63143585-1c28-4380-853d-a6e5dff6f8c1" />
+    <img src="https://github.com/primer/brand/assets/912236/626bae6a-4bdb-42cb-8b82-2f6615f83283" />
     <Caption>
       Don't use the large size in small sized areas or components like rivers,
       so they don't conflict with the main content. Even if the quote is short,
@@ -129,11 +147,11 @@ The testimonial component uses the small size by default. Use the large size to 
 
 <DoDontContainer stacked>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/20e90276-8b6c-4e14-911b-f28b38eb7f7b" />
+    <img src="https://github.com/primer/brand/assets/912236/5ac744e5-045c-4acc-8dee-38ebc740a8e4" />
     <Caption>Use the small size for single row groups of testimonials.</Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/136e559e-aa04-4814-99f7-f1f722ebb8e6" />
+    <img src="https://github.com/primer/brand/assets/912236/ef1e9bdb-2ab8-457f-b54b-ae224c9119c1" />
     <Caption>
       Don't use the large size in single row groups, even if the content is
       short. Stack them vertically and use 2 columns instead.
