--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -10,9 +10,9 @@ export default ComponentLayout
 
 ![An image displaying a the CTA form anatomy, with a label on top of an input form, followed by a CTA button and optional checkbox underneath the input.](https://github.com/primer/brand/assets/131988618/2c86dd18-f3b0-41e3-a0d3-cca004ea37b1)
 
-- Label: Short text that describes the required input form. 
+- Label: Short text that describes the required input form.
 - Text input: Single-line text field
-- Action: Call-to-action button that corresponds after completing the input form. 
+- Action: Call-to-action button that corresponds after completing the input form.
 - Checkbox: An optional checkbox to request additional behavior.
 
 ## Usage
@@ -25,34 +25,40 @@ By adopting the same guidelines as the respective [text input](/components/TextI
 
 We recommend the CTA form over the [CTA banner](/components/CTABanner) when the main action for a user to take is to submit a form (e.g subscribe to a newsletter) vs taking actions (sign in or bring the user to a pricing page).
 
-<DoDontContainer>
+<DoDontContainer stacked>
   <Do>
-<img src="https://github.com/primer/brand/assets/131988618/561b62c9-c328-4c7e-98e5-18e5a5d7ad42" />
-    <Caption>Place the CTA form near the end of the page to conclude the user journey and encourage users to take action.</Caption>
+    <img src="https://github.com/primer/brand/assets/131988618/561b62c9-c328-4c7e-98e5-18e5a5d7ad42" />
+    <Caption>
+      Place the CTA form near the end of the page to conclude the user journey
+      and encourage users to take action.
+    </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/131988618/0cb06dc0-b885-4b4d-a997-cd42da72f798" />
+    <img src="https://github.com/primer/brand/assets/912236/00c775f9-7a6e-4a2f-b40a-09f72c0498f1" />
     <Caption>
-      Don't place the CTA Form early on in the user journey. Use the Hero instead for early on.
+      Don't place the CTA Form early on in the user journey. Use the Hero
+      instead for early on.
     </Caption>
   </Dont>
 </DoDontContainer>
 
 ### Setting Context
 
-Keep the CTA Form simple and intuitive to minimize friction and encourage user engagement. Ensure there is enough context surrounding the component. Utilize the label as a description of the form input. 
+Keep the CTA Form simple and intuitive to minimize friction and encourage user engagement. Ensure there is enough context surrounding the component. Utilize the label as a description of the form input.
 
-<DoDontContainer>
+<DoDontContainer stacked>
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/15cc3be6-89cb-4b63-ab03-9236693f66c3" />
     <Caption>
-      Include context in areas surrounding the CTA Form to encourage user engagement. 
+      Include context in areas surrounding the CTA Form to encourage user
+      engagement.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/131988618/2333fa03-4bd3-488d-ae41-81e3511259ca" />
+    <img src="https://github.com/primer/brand/assets/912236/e1e342d8-36fb-4237-ba96-a216fbfd6922" />
     <Caption>
-        Don't use the CTA Form without context. The label should be used to describe the input, not to provide context.
+      Don't use the CTA Form without context. The label should be used to
+      describe the input, not to provide context.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -61,11 +67,12 @@ Keep the CTA Form simple and intuitive to minimize friction and encourage user e
 
 When implementing CTA form, it's important to consider the length of the input field in order to maintain consistency and enhance user familiarity with the interface. Keeping the string length (width) of the component relative to the expected input is a recommended practice. Pair the component with additional information or context instead of spanning in wide viewports.
 
-<DoDontContainer>
+<DoDontContainer stacked>
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/0bd93f12-ef38-4fc3-9dd5-ce685aa7d2bd" />
     <Caption>
-      Keep the string length (width) of the component relative to the expected input. 
+      Keep the string length (width) of the component relative to the expected
+      input.
     </Caption>
   </Do>
   <Dont>
@@ -78,7 +85,7 @@ When implementing CTA form, it's important to consider the length of the input f
 
 ### Checkbox
 
-Use the checkbox property in the CTA form to prompt additional user behavior or seek acknowledgment– examples include to gather consent, confirm agreement to terms, or request optional actions. 
+Use the checkbox property in the CTA form to prompt additional user behavior or seek acknowledgment– examples include to gather consent, confirm agreement to terms, or request optional actions.
 
 It is crucial to provide a clear description of the checkbox's purpose and hyperlink to relevant resources. When using the checkbox, completion of the checkbox must be a requirement (not optional) to proceed with the CTA.
 
@@ -86,14 +93,13 @@ It is crucial to provide a clear description of the checkbox's purpose and hyper
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/f960b448-99e1-4703-a4a7-ea1441f6c72a" />
     <Caption>
-        Use short and concise text for the checkbox and inline links to relevant resources.
+      Use short and concise text for the checkbox and inline links to relevant
+      resources.
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/52e87926-c18c-4748-851e-41fd1e86f5d8" />
-    <Caption>
-        Don't use lengthy text or unstlyed links.
-    </Caption>
+    <Caption>Don't use lengthy text or unstlyed links.</Caption>
   </Dont>
 </DoDontContainer>
 
@@ -101,5 +107,5 @@ It is crucial to provide a clear description of the checkbox's purpose and hyper
 
 - [Button](/components/Button): To display a button that preforms an action.
 - [Text input](/components/TextInput): To create an input form for single-line text field.
-- [Checkbox](/components/Checkbox): To select options or acknowledge information. 
+- [Checkbox](/components/Checkbox): To select options or acknowledge information.
 - [CTA Banner](/components/CTABanner): To draw attention to or create urgency around a user action.
