--- a/apps/docs/content/components/Grid/index.mdx
+++ b/apps/docs/content/components/Grid/index.mdx
@@ -127,175 +127,49 @@ We recommend using either the grid or stack component, depending on how the chil
 
 ### Grid examples
 
-<Container
-  as="figure"
-  display="flex"
-  alignItems="flex-start"
-  justifyContent="space-between"
-  flexDirection={['column', 'column', 'column', 'column', 'row']}
-  m={0}
-  mb={3}
-  sx={{gap: 3}}
->
-  <Container as="figcaption" mt="1">
-    <Text as="h4">Page or section layout</Text>
-    <Text as="p" mt="0">
-      When defining the page or a section layout. E.g. A page with sidebar, main
-      and navigation areas.
-    </Text>
-  </Container>
-  <img
-    src="https://github.com/primer/brand/assets/912236/7c418d9e-3e44-4a0e-9f4f-18f5a62d89d0"
-    role="presentation"
-    width="456"
-  />
-</Container>
+#### Page or section layout
 
-<Container
-  as="figure"
-  display="flex"
-  alignItems="flex-start"
-  justifyContent="space-between"
-  flexDirection={['column', 'column', 'column', 'column', 'row']}
-  m={0}
-  mb={3}
-  sx={{gap: 3}}
->
-  <Container as="figcaption" mt="1">
-    <Text as="h4">Sub sections</Text>
-    <Text as="p" mt="0">
-      When dividing an area into two areas. E.g. A "Send feedback" sidebar and a
-      form, and the form uses the grid for the form layout itself.
-    </Text>
-  </Container>
-  <img
-    src="https://github.com/primer/brand/assets/912236/d617bfea-0758-4066-9ccc-7853eeb35cf3"
-    role="presentation"
-    width="456"
-  />
-</Container>
+When defining the page or a section layout. E.g. A page with sidebar, main and navigation areas.
 
-<Container
-  as="figure"
-  display="flex"
-  alignItems="flex-start"
-  justifyContent="space-between"
-  flexDirection={['column', 'column', 'column', 'column', 'row']}
-  m={0}
-  mb={3}
-  sx={{gap: 3}}
->
-  <Container as="figcaption" mt="1">
-    <h4 style={{marginBottom: 0}}>Card or pillar grids</h4>
-    <Text as="p" mt="0">
-      When laying out cards, pillars, or similar content-based elements.
-    </Text>
-  </Container>
-  <img
-    src="https://github.com/primer/brand/assets/912236/56dfbcd8-72ff-401c-a530-25f11f671f7f"
-    role="presentation"
-    width="456"
-  />
-</Container>
+![](https://github.com/primer/brand/assets/912236/7c418d9e-3e44-4a0e-9f4f-18f5a62d89d0)
+
+#### Sub sections
+
+When dividing an area into two areas. E.g. A "Send feedback" sidebar and a form, and the form uses the grid for the form layout itself.
+
+![](https://github.com/primer/brand/assets/912236/d617bfea-0758-4066-9ccc-7853eeb35cf3)
+
+#### Card or pillar grids
+
+When laying out cards, pillars, or similar content-based elements.
+
+![](https://github.com/primer/brand/assets/912236/56dfbcd8-72ff-401c-a530-25f11f671f7f)
 
 ### Stack examples
 
-<Container
-  as="figure"
-  display="flex"
-  alignItems="flex-start"
-  justifyContent="space-between"
-  flexDirection={['column', 'column', 'column', 'column', 'row']}
-  m={0}
-  mb={3}
-  sx={{gap: 3}}
->
-  <Container as="figcaption" mt="1">
-    <h4 style={{marginBottom: 0}}>Navigation</h4>
-    <Text as="p" mt="0">
-      For the page navigation or a list of links. E.g. Having a logo on the left
-      side and the navigation on the right.
-    </Text>
-  </Container>
-  <img
-    src="https://github.com/primer/brand/assets/912236/022fc146-6286-4074-abc5-7341743da82e"
-    role="presentation"
-    width="456"
-  />
-</Container>
+#### Navigation
 
-<Container
-  as="figure"
-  display="flex"
-  alignItems="flex-start"
-  justifyContent="space-between"
-  flexDirection={['column', 'column', 'column', 'column', 'row']}
-  m={0}
-  mb={3}
-  sx={{gap: 3}}
->
-  <Container as="figcaption" mt="1">
-    <h4 style={{marginBottom: 0}}>List of actions</h4>
-    <Text as="p" mt="0">
-      For a group of action or buttons, where items are displayed next to each
-      other, and they are distributed horizontally or vertically, depending on
-      the content length and the screen size.
-    </Text>
-  </Container>
-  <img
-    src="https://github.com/primer/brand/assets/912236/0b1025c7-1c07-4ff3-adab-5d685d78ea99"
-    role="presentation"
-    width="456"
-  />
-</Container>
+For the page navigation or a list of links. E.g. Having a logo on the left side and the navigation on the right.
 
-<Container
-  as="figure"
-  display="flex"
-  alignItems="flex-start"
-  justifyContent="space-between"
-  flexDirection={['column', 'column', 'column', 'column', 'row']}
-  m={0}
-  mb={3}
-  sx={{gap: 3}}
->
-  <Container as="figcaption" mt="1">
-    <h4 style={{marginBottom: 0}}>Form elements</h4>
-    <Text as="p" mt="0">
-      For combinations of input fields with a button next to it.
-    </Text>
-  </Container>
-  <img
-    src="https://github.com/primer/brand/assets/912236/8f83eae5-995b-426a-bf54-7407579cdb8c"
-    role="presentation"
-    width="456"
-  />
-</Container>
+![](https://github.com/primer/brand/assets/912236/022fc146-6286-4074-abc5-7341743da82e)
 
-<Container
-  as="figure"
-  display="flex"
-  alignItems="flex-start"
-  justifyContent="space-between"
-  flexDirection={['column', 'column', 'column', 'column', 'row']}
-  m={0}
-  mb={3}
-  sx={{gap: 3}}
->
-  <Container as="figcaption" mt="1">
-    <h4 style={{marginBottom: 0}}>Profile cards</h4>
-    <Text as="p" mt="0">
-      For combinations of an avatar and descriptive content, where the
-      information takes the remaining space from its parent element. This could
-      be applied to any combinations of an icon and text too.
-    </Text>
-  </Container>
-  <img
-    src="https://github.com/primer/brand/assets/912236/c53f2ee7-93f1-416f-8fd5-bd965fd37f86"
-    role="presentation"
-    width="456"
-  />
-</Container>
+#### List of actions
+
+For a group of action or buttons, where items are displayed next to each other, and they are distributed horizontally or vertically, depending on the content length and the screen size.
+
+![](https://github.com/primer/brand/assets/912236/10ae15dd-f8f9-4174-9c89-2e9355120204)
+
+#### Form elements
+
+For combinations of input fields with a button next to it.
+
+![](https://github.com/primer/brand/assets/912236/78a81f0e-55d5-4db5-8a8b-3184394fac51)
+
+#### Profile cards
+
+For combinations of an avatar and descriptive content, where the information takes the remaining space from its parent element. This could be applied to any combinations of an icon and text too.
+
+![](https://github.com/primer/brand/assets/912236/c53f2ee7-93f1-416f-8fd5-bd965fd37f86)
 
 [^2]: This section is based on the article [Grid for layout, Flexbox for components](https://ishadeed.com/article/grid-layout-flexbox-components/) by [@shadeed](https://github.com/shadeed)
 
