Added hideUntilSticky prop to AnchorNav

--- a/apps/docs/content/components/AnchorNav.mdx
+++ b/apps/docs/content/components/AnchorNav.mdx
@@ -139,6 +139,7 @@ Please refer to our [Storybook examples](https://primer.style/brand/storybook/?p
 | `children`             | <PropTableValues values={['AnchorNav.Link','AnchorNav.Action', 'ReactNode' ]} addLineBreaks />, |         | Valid child nodes                                                       |
 | `className`            | `string`                                                                                        |         | Sets a custom class                                                     |
 | `enableDefaultBgColor` | `boolean`                                                                                       | `false` | Enable the idle state background color, which is transparent by default |
+| `hideUntilSticky`      | `boolean`                                                                                       | `false` | When true, the anchor nav will hide until it is sticky.                 |
 | `id`                   | `string`                                                                                        |         | Sets a custom id                                                        |
 | `ref`                  | `React.RefObject`                                                                               |         | Forward a Ref to the underlying DOM node                                |
 
