Update grid examples

--- a/apps/docs/content/components/Grid/index.mdx
+++ b/apps/docs/content/components/Grid/index.mdx
@@ -129,9 +129,9 @@ We recommend using either the grid or stack component, depending on how the chil
 
 #### Page or section layout
 
-When defining the page or a section layout. E.g. A page with sidebar, main and navigation areas.
+When defining the page or a section layout. E.g. A page with navigation, main content and footer areas.
 
-![](https://github.com/primer/brand/assets/912236/7c418d9e-3e44-4a0e-9f4f-18f5a62d89d0)
+![](https://github.com/primer/brand/assets/912236/76e816de-1ec7-40c2-993f-61fe05f97656)
 
 #### Sub sections
 
