Update FAQ with groups

--- a/apps/docs/content/components/FAQ/index.mdx
+++ b/apps/docs/content/components/FAQ/index.mdx
@@ -26,7 +26,7 @@ For answers that need to provide a list of tasks, we recommend using an [ordered
 <DoDontContainer stacked>
   <Do>
     <img
-      src="https://github.com/primer/brand/assets/912236/c710eb6f-bbdd-43e3-85ff-18b1e0f3c259"
+      src="https://github.com/primer/brand/assets/912236/5566161b-439b-4e13-b41c-188723b0bae6"
       alt=""
     />
     <Caption>
@@ -36,7 +36,7 @@ For answers that need to provide a list of tasks, we recommend using an [ordered
   </Do>
   <Dont>
     <img
-      src="https://github.com/primer/brand/assets/912236/23377a5a-7b17-466d-8c86-3dff101c7e16"
+      src="https://github.com/primer/brand/assets/912236/a42230be-ee4b-4905-885b-dab98f4889c9"
       alt=""
     />
     <Caption>
@@ -46,24 +46,24 @@ For answers that need to provide a list of tasks, we recommend using an [ordered
   </Dont>
 </DoDontContainer>
 
-When using long lists of questions and answers, consider using subheadings to group the items into categories and make it easier for the user to scan the list.
+When using long lists of questions and answers, consider using the FAQ group to group the items into categories and make it easier for the user to scan the list.
 
 <DoDontContainer stacked>
   <Do>
     <img
-      src="https://github.com/primer/brand/assets/912236/028b0aaf-148e-4a7b-b454-c733d1460e49"
+      src="https://github.com/primer/brand/assets/912236/a659524d-4574-4880-8f00-c6846438492e"
       alt=""
     />
-    <Caption>Use the subheading to group the questions and answers.</Caption>
+    <Caption>Use the FAQ group to group related questions and answers.</Caption>
   </Do>
   <Dont>
     <img
-      src="https://github.com/primer/brand/assets/912236/b4087929-73f2-41d4-b5db-d08b73b51874"
+      src="https://github.com/primer/brand/assets/912236/315a9a4e-95de-4dc5-9129-ff31108d5dfd"
       alt=""
     />
     <Caption>
-      Don't use long lists of questions and answers. We recommend using
-      subheadings to group them and to help the user scan the list.
+      Don't use long lists of questions and answers. We recommend using FAQ
+      groups to group them and to help the user scan the list.
     </Caption>
   </Dont>
 </DoDontContainer>
