Update FAQ content

--- a/apps/docs/content/components/FAQ/index.mdx
+++ b/apps/docs/content/components/FAQ/index.mdx
@@ -46,7 +46,9 @@ For answers that need to provide a list of tasks, we recommend using an [ordered
   </Dont>
 </DoDontContainer>
 
-When using long lists of questions and answers, consider using the FAQ group to group the items into categories and make it easier for the user to scan the list.
+## FAQ group
+
+When using long lists of questions and answers, consider using the FAQ group to organize items into content-related categories to make it easier for the user to scan the list.
 
 <DoDontContainer stacked>
   <Do>
@@ -54,7 +56,7 @@ When using long lists of questions and answers, consider using the FAQ group to 
       src="https://github.com/primer/brand/assets/912236/a659524d-4574-4880-8f00-c6846438492e"
       alt=""
     />
-    <Caption>Use the FAQ group to group related questions and answers.</Caption>
+    <Caption>Use the FAQ group for related questions and answers.</Caption>
   </Do>
   <Dont>
     <img
