[Site refactor] Documentation update (#439)

--- a/apps/docs/content/components/FAQ/index.mdx
+++ b/apps/docs/content/components/FAQ/index.mdx
@@ -8,11 +8,11 @@ export default ComponentLayout
 
 ## Anatomy
 
-![The FAQ component has a heading, optional subheading, and a list of questions that are interactive to expand and display answers](https://github.com/primer/brand/assets/912236/b2fa1bb7-938c-42ed-a549-fdc9f2759184)
+![The FAQ component has a heading, optional subheading, and a list of questions that are interactive to expand and display answers](https://github.com/primer/brand/assets/912236/cfc22774-7348-4e2b-9887-2157e1a17e16)
 
 - Heading: The main title of the FAQ.
 - Subheading: An optional short description that extends the information provided by the heading and helps group the items in the list.
-- Question: The question being answered. 
+- Question: The question being answered.
 - Answer: The answer to the question.
 
 ## Usage
@@ -26,7 +26,7 @@ For answers that need to provide a list of tasks, we recommend using an [ordered
 <DoDontContainer stacked>
   <Do>
     <img
-      src="https://github.com/primer/brand/assets/912236/824ebdee-4cc0-425f-8521-2c4e7b06491f"
+      src="https://github.com/primer/brand/assets/912236/5566161b-439b-4e13-b41c-188723b0bae6"
       alt=""
     />
     <Caption>
@@ -36,7 +36,7 @@ For answers that need to provide a list of tasks, we recommend using an [ordered
   </Do>
   <Dont>
     <img
-      src="https://github.com/primer/brand/assets/912236/37ca02ce-7eef-47bf-aac0-f24453dff5be"
+      src="https://github.com/primer/brand/assets/912236/a42230be-ee4b-4905-885b-dab98f4889c9"
       alt=""
     />
     <Caption>
@@ -46,24 +46,26 @@ For answers that need to provide a list of tasks, we recommend using an [ordered
   </Dont>
 </DoDontContainer>
 
-When using long lists of questions and answers, consider using subheadings to group the items into categories and make it easier for the user to scan the list.
+## FAQ group
+
+When using long lists of questions and answers, consider using the FAQ group to organize items into content-related categories to make it easier for the user to scan the list.
 
 <DoDontContainer stacked>
   <Do>
     <img
-      src="https://github.com/primer/brand/assets/912236/e38b0b06-24cd-4d45-8939-1ad31bb62e58"
+      src="https://github.com/primer/brand/assets/912236/a659524d-4574-4880-8f00-c6846438492e"
       alt=""
     />
-    <Caption>Use the subheading to group the questions and answers.</Caption>
+    <Caption>Use the FAQ group for related questions and answers.</Caption>
   </Do>
   <Dont>
     <img
-      src="https://github.com/primer/brand/assets/912236/b47441b5-98c3-4f24-b987-e550ddfbae31"
+      src="https://github.com/primer/brand/assets/912236/315a9a4e-95de-4dc5-9129-ff31108d5dfd"
       alt=""
     />
     <Caption>
-      Don't use long lists of questions and answers. We recommend using
-      subheadings to group them and to help the user scan the list.
+      Don't use long lists of questions and answers. We recommend using FAQ
+      groups to group them and to help the user scan the list.
     </Caption>
   </Dont>
 </DoDontContainer>
