--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -82,7 +82,7 @@ Cards typically appear in groups of three or four in desktop viewports. For smal
 
 ## Anatomy
 
-![An image showing the card anatomy with an icon as a visual asset, a heading, a description and a CTA text in a vertical order.](https://github.com/primer/brand/assets/6951037/f7e97691-0698-4cba-9a5e-032d35ef24d5)
+![An image showing the card anatomy with an icon as a visual asset, a heading, a description and a CTA text in a vertical order.](https://github.com/primer/brand/assets/6951037/61039c70-6dc8-4357-8859-8299bdad78fb)
 
 ### Visual asset
 
@@ -118,6 +118,12 @@ The description is an optional short text that extends the information provided 
 ### Call to action
 
 The call to action label indicates the action or resource the card links to. It defaults to "Learn more".
+
+## Options
+
+### Border
+
+Card offers a variation with a border. Border is disabled by default. 
 
 ## Related components
 
