--- a/apps/docs/content/components/Heading/react.mdx
+++ b/apps/docs/content/components/Heading/react.mdx
@@ -87,8 +87,8 @@ Use the `weight` prop to override the default visual appearance if required.
   <Heading as="h3" weight="medium">
     medium
   </Heading>
-  <Heading as="h3" weight="normal">
-    normal
+  <Heading as="h3" weight="regular">
+    regular
   </Heading>
   <Heading as="h3" weight="light">
     light
