--- a/apps/docs/content/components/Text/react.mdx
+++ b/apps/docs/content/components/Text/react.mdx
@@ -106,8 +106,8 @@ Use the `weight` prop to adjust the default visual appearance if required.
   <Text as="p" weight="medium">
     medium
   </Text>
-  <Text as="p" weight="normal">
-    normal
+  <Text as="p" weight="regular">
+    regular
   </Text>
   <Text as="p" weight="light">
     light
