Update Button and ButtonGroup images (#437)
* Update index.mdx

* Update index.mdx

* Update index.mdx

* Update index.mdx

* Updated images for ButtonGroup

* Replaced wrong images

* Update index.mdx

* Update index.mdx

--- a/apps/docs/content/components/Button/index.mdx
+++ b/apps/docs/content/components/Button/index.mdx
@@ -6,7 +6,7 @@ description: Use the button component for the main actions on a page or form.
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
-![An image showing different button types.](https://github.com/primer/brand/assets/912236/435f104b-47a5-49d8-9568-6825f2b3789c)
+![An image showing different button types.](https://github.com/primer/brand/assets/6951037/fcc3b962-1b4a-416b-be29-4a70ef503f2a)
 
 ## Usage
 
@@ -14,11 +14,11 @@ Buttons allow users to initiate an action or command when clicked. The button's 
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/1cbc4eed-6047-4e4a-a38d-11b6ffba3a67" />
+    <img src="https://github.com/primer/brand/assets/6951037/83f703f5-d02c-45f1-82d2-e819613a6638" />
     <Caption>Keep button labels succinct with no line breaks.</Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/5b2562b7-b6eb-4930-8b7d-3607379b0e3c" />
+    <img src="https://github.com/primer/brand/assets/6951037/e0b67dea-712b-4483-9222-0b499e539415" />
     <Caption>
       Buttons should never contain line breaks and lose their button shape.
     </Caption>
@@ -27,29 +27,29 @@ Buttons allow users to initiate an action or command when clicked. The button's 
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/6a112917-5fed-4c30-ad22-e1f3c437d50b" />
+    <img src="https://github.com/primer/brand/assets/6951037/96da1bd5-d537-40c1-9103-96254813648f" />
     <Caption>Show focus styles on keyboard :focus</Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/01e53312-c2cb-4128-937f-01e4c313362c" />
+    <img src="https://github.com/primer/brand/assets/6951037/edc931cf-06ed-4814-8ad0-24a8344902c0" />
     <Caption>Don't remove default button :focus styles.</Caption>
   </Dont>
 </DoDontContainer>
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/e0bf58f6-db93-4dfb-927b-0d058e235e86" />
+    <img src="https://github.com/primer/brand/assets/6951037/56824212-3622-4546-b437-53dbced734a6" />
     <Caption>Use sentence case for labels.</Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/41b4bb4e-1709-4ddc-834c-9f474061b943" />
+    <img src="https://github.com/primer/brand/assets/6951037/515e833e-fad2-44fd-aae8-fae6301974c1" />
     <Caption>Don't use all-caps or other text formats.</Caption>
   </Dont>
 </DoDontContainer>
 
 ## Anatomy
 
-![An image showing different button types.](https://github.com/primer/brand/assets/912236/af85252d-783e-47dd-9b2c-ead0df0745b9)
+![An image showing the different parts of a button with annotations.](https://github.com/primer/brand/assets/6951037/ef74e834-2650-424e-b382-bdcd4a09c113)
 
 ## Options
 
@@ -59,13 +59,13 @@ Buttons allow users to initiate an action or command when clicked. The button's 
 
 Primary buttons have top priority in visual hierarchy, and using too many of them on a single view dilutes their effectiveness. We recommend to limit the primary button to one button per view, and place it in the visible section, whenever possible, to indicate its emphasis relative to other actions. Use multiple primary buttons only when the action is repeated in multiple places of the same page. E,g a "Log in" button in the header and in the footer area.
 
-![An image showing all primary states.](https://github.com/primer/brand/assets/912236/95d56f96-2453-41db-81f1-6c2e04568c26)
+![An image showing all primary states.](https://github.com/primer/brand/assets/6951037/dfad0124-4cdc-4230-b442-4ee9c747d0f0)
 
 #### Secondary
 
 Secondary buttons are the default button type. Use them for the main actions on a page or form. Secondary buttons are the most common button type and should be used in most cases. They can be paired with a primary button to perform a secondary action, or used on their own.
 
-![An image showing all secondary states.](https://github.com/primer/brand/assets/912236/1acc8007-13a2-4083-b0f2-c1b4d5cf7b82)
+![An image showing all secondary states.](https://github.com/primer/brand/assets/6951037/71f5a85d-4e63-4a3b-b7fc-2492ceae2b30)
 
 #### Subtle
 
@@ -77,7 +77,7 @@ Subtle buttons have a transparent background with translucent hover and active s
 
 Turning on the block option for button allows the button to span the full width of its container. This feature can be particularly useful when you want the button to occupy more space. Block button can continue to pair with secondary or primary variants.
 
-![An image showing block button with all subtle states.](https://github.com/primer/brand/assets/131988618/eb7ab85e-c9b1-49ed-93be-ad3e5bff656e)
+![An image showing block button with all subtle states.](https://github.com/primer/brand/assets/6951037/2fe48284-7c3d-4262-9992-3fc029237fe6)
 
 ### Trailing and leading icons
 
@@ -87,13 +87,13 @@ Use a trailing visual if the button action involves selecting items (dropdown, s
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/2de44a58-fbf6-46bf-a645-5efd88da70dd" />
+    <img src="https://github.com/primer/brand/assets/6951037/558dd2c0-22b9-4e0b-aa0d-6394eae29e6c" />
     <Caption>
       Use a leading icon that provides context and reinforces the label.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/9dba03c8-5a70-464c-9100-33a2205e4c26" />
+    <img src="https://github.com/primer/brand/assets/6951037/2b4b06e5-5e54-4d8d-885a-b0d3faaa1298" />
     <Caption>
       Don't use a trailing icons to add a visual cue to the label. Use the
       leading icon for better scanability.
@@ -103,14 +103,14 @@ Use a trailing visual if the button action involves selecting items (dropdown, s
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/ef4c5d1c-abbb-477a-92d2-61a690924fc5" />
+    <img src="https://github.com/primer/brand/assets/6951037/5e534c85-0dcd-44b2-8c21-f80f2f14a4d0" />
     <Caption>
       Use a trailing icon for select, dropdown, or filter actions to reinforce
       its direction.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/5c052c37-3482-4061-b399-97a455484e01" />
+    <img src="https://github.com/primer/brand/assets/6951037/2b3ad072-d3dd-4b34-b7fa-a915fd84d03d" />
     <Caption>
       Don't use a leading icon or the arrow for select, dropdown, or filter
       actions.
